# vision-stream

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
scripts/: make-yolo.sh
src/vision_stream/: __init__.py  app.py
src/vision_stream/config/: app.yaml
src/vision_stream/templates/: index.html
